--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <body>
 
         <div class="main">
-            <h1 class="h1">Welcome To My Website</h1>
+
+            <div class="header">
+                <h1>Welcome To My Website</h1>
+            </div>
+
+            <div class="nav-div">
+                <nav class="nav">
+                    <a href="/">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+
         </div>
 
         <script src="js/script.js"></script>
