--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
+        <title>Aryan - A Portfolio Website</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -12,19 +12,30 @@
 
         <div class="main">
 
-            <div class="header">
-                <h1>Welcome To My Website</h1>
-            </div>
-
-            <div class="nav-div">
+            <header class="header">
                 <nav class="nav">
-                    <a href="/">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="projects.html">Projects</a>
-                    <a href="contact.html">Contact</a>
+                    <div class="left">Aryan's Portfolio</div>
+                    <div class="right">
+                        <ul class="right-ul">
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Services</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
                 </nav>
-            </div>
+            </header>
 
+            <main>
+                <section class="firstSection">
+                    <div class="leftSection">
+                        Left
+                    </div>
+                    <div class="rightSection">
+                        Right
+                    </div>
+                </section>
+            </main>
         </div>
 
         <script src="js/script.js"></script>
