--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
             </header>
 
             <main>
+                <div class="img-bg"></div>
                 <section class="firstSection">
                     <div class="leftSection">
-                        Left
+                        <div class="leftImg">
+                            Hi! I am Aryan
+                        </div>
                     </div>
                     <div class="rightSection">
-                        Right
+                        HEllo
                     </div>
                 </section>
             </main>
