--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
             </header>
 
             <main>
-                <div class="img-bg"></div>
                 <section class="firstSection">
                     <div class="leftSection">
                         <div class="leftImg">
-                            Hi! I am Aryan
+                            Hi! I am <div class="name">Aryan,</div>A passionate <div class="dev">Web Developer</div>
                         </div>
                     </div>
                     <div class="rightSection">
-                        HEllo
+                        <img src="./assets/web_dev.png" alt="">
                     </div>
                 </section>
             </main>
