--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <div class="left">Aryan's Portfolio</div>
                     <div class="right">
                         <ul class="right-ul">
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Services</li>
-                            <li>Contact</li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Services</a></li>
+                            <li><a href="">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -29,9 +29,11 @@
             <main>
                 <section class="firstSection">
                     <div class="leftSection">
-                        <div class="leftImg">
-                            Hi! I am <div class="name">Aryan,</div>A passionate <div class="dev">Web Developer</div>
-                        </div>
+                        <p>
+                            Hello! My name is <span class="name">Aryan</span> and I am a passionate <span
+                                class="dev">Web
+                                Developer</span>
+                        </p>
                     </div>
                     <div class="rightSection">
                         <img src="./assets/web_dev.png" alt="">
