--- a/index.html
+++ b/index.html
@@ -30,15 +30,25 @@
                 <section class="firstSection">
                     <div class="leftSection">
                         <p>
-                            Hello! My name is <span class="name">Aryan</span> and I am a passionate <span
-                                class="dev">Web
-                                Developer</span>
+                            Hello! My name is <span class="name">Aryan</span> and I am a <span
+                                class="dev typed-text"></span> <span class="cursor">&nbsp;</span>
                         </p>
                     </div>
                     <div class="rightSection">
                         <img src="./assets/web_dev.png" alt="">
                     </div>
                 </section>
+
+                <hr class="line">
+
+                <section class="secondSection">
+                    <div class="CV clip1"></div>
+                    <div class="CV clip2"></div>
+                    <div class="CV clip3"></div>
+                </section>
+
+                <hr class="line">
+
             </main>
         </div>
 
