--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
                 <hr class="line">
 
+                <section class="thirdSection">
+
+                </section>
             </main>
         </div>
 
