--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <div class="left">Aryan's Portfolio</div>
                     <div class="right">
                         <ul class="right-ul">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -40,17 +40,63 @@
                 </section>
 
                 <hr class="line">
+                <h1 id="about" class="heading">About Me
+                    <hr class="line1">
+                    <hr class="line2">
+                </h1>
+
 
                 <section class="secondSection">
+
                     <div class="CV clip1"></div>
                     <div class="CV clip2"></div>
                     <div class="CV clip3"></div>
                 </section>
 
                 <hr class="line">
+                <h1 id="services" class="heading">Services
+                    <hr class="line1">
+                    <hr class="line2">
+                </h1>
 
-                <section class="thirdSection">
+                <section id="services" class="thirdSection">
+                    <div class="services-container">
+                        <div class="service-box">
+                            <div class="service icon">
+                                <img src="./assets/web_designer.png" class="icon">
+                            </div>
+                            <div class="service-title">Web Designing</div>
+                            <div class="service-description">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
+                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
+                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                            </div>
+                        </div>
 
+                        <div class="service-box">
+                            <div class="service icon">
+                                <img src="./assets/web_dev.png" class="icon">
+                            </div>
+                            <div class="service-title">Web Development</div>
+                            <div class="service-description">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
+                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
+                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                            </div>
+                        </div>
+
+                        <div class="service-box">
+                            <div class="service icon">
+                                <img src="./assets/graphics_designer.png" class="icon">
+                            </div>
+                            <div class="service-title">Graphics Designing</div>
+                            <div class="service-description">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
+                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
+                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </main>
         </div>
