--- a/index.html
+++ b/index.html
@@ -62,42 +62,55 @@
                 <section id="services" class="thirdSection">
                     <div class="services-container">
                         <div class="service-box">
-                            <div class="service icon">
+                            <div class="service-icon">
                                 <img src="./assets/web_designer.png" class="icon">
                             </div>
                             <div class="service-title">Web Designing</div>
                             <div class="service-description">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
-                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
-                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                                &emsp;&emsp;&emsp;&emsp;I can provide you with an attractive and beautiful website
+                                design. I am an experienced
+                                web designer and you can rest assure that you will get the perfect value of your money
+                                spent on my project.
                             </div>
                         </div>
 
                         <div class="service-box">
-                            <div class="service icon">
+                            <div class="service-icon">
                                 <img src="./assets/web_dev.png" class="icon">
                             </div>
                             <div class="service-title">Web Development</div>
                             <div class="service-description">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
-                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
-                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                                &emsp;&emsp;&emsp;&emsp;I can build you a responsive website based on a design of your
+                                own choice. I am web
+                                developer, highly experienced in vanilla HTML, CSS and JS. I can also help you rebuild
+                                your old website and make it modern and responsive.
                             </div>
                         </div>
 
                         <div class="service-box">
-                            <div class="service icon">
+                            <div class="service-icon">
                                 <img src="./assets/graphics_designer.png" class="icon">
                             </div>
                             <div class="service-title">Graphics Designing</div>
                             <div class="service-description">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo reiciendis a
-                                excepturi eos soluta enim maxime illum illo pariatur libero minima sapiente fugiat
-                                dignissimos iste provident, consectetur obcaecati? Deserunt, voluptates?
+                                &emsp;&emsp;&emsp;&emsp;I am highly experienced in graphics designing, I have been
+                                working in this field
+                                for
+                                over three years and I have gained a lot of experience and expertise in this sector. I
+                                can provide you with the best designs you can get at this price.
                             </div>
                         </div>
                     </div>
                 </section>
+
+                <hr class="line">
+                <button class="cta-btn" id="open">
+                    <h1 id="contact" class="heading">Contact Me</h1>
+                </button>
+                <hr class="line">
+
+                <footer class="footer"></footer>
+
             </main>
         </div>
 
