--- a/index.html
+++ b/index.html
@@ -140,10 +140,19 @@
                     </section>
                 </section>
 
-
-                <footer class="footer"></footer>
-
             </main>
+
+            <footer class="footer">
+                <h2 id="home" class="footer-h2">Aryan's Portfolio</h2>
+                <ul class="footer-ul">
+                    <img src="./assets/email.png" alt="" class="footer-icon">
+                    <li class="footer-li">E-mail: aryanhohai@gmail.com</li>
+                    <img src="./assets/phone.png" alt="" class="footer-icon">
+                    <li class="footer-li">Phone: 9814273753</li>
+                    <img src="./assets/website.png" alt="" class="footer-icon">
+                    <li class="footer-li">Website: aryan.github.io</li>
+                </ul>
+            </footer>
         </div>
 
         <script src="js/script.js"></script>
