--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="left">Aryan's Portfolio</div>
                     <div class="right">
                         <ul class="right-ul">
-                            <li><a href="/">Home</a></li>
+                            <li><a href="/portfolio">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#contact">Contact</a></li>
