--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
-        <div class="main">
+        <div id="home" class="main">
 
             <header class="header">
                 <nav class="nav">
                     <div class="left">Aryan's Portfolio</div>
                     <div class="right">
                         <ul class="right-ul">
-                            <li><a href="/portfolio">Home</a></li>
+                            <li><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#contact">Contact</a></li>
