--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <img src="./assets/phone.png" alt="" class="footer-icon">
                     <li class="footer-li">Phone: 9814273753</li>
                     <img src="./assets/website.png" alt="" class="footer-icon">
-                    <li class="footer-li">Website: aryan.github.io</li>
+                    <li class="footer-li">Website: aryanad.github.io/portfolio</li>
                 </ul>
             </footer>
         </div>
