--- a/index.html
+++ b/index.html
@@ -125,14 +125,8 @@
                                     <input type="text" id="email" placeholder="Enter Your Email" class="form-input">
                                 </div>
                                 <div>
-                                    <label for="password">Password</label>
-                                    <input type="text" id="password" placeholder="Enter Your Password"
-                                        class="form-input">
-                                </div>
-                                <div>
-                                    <label for="password2">Confirm Password</label>
-                                    <input type="text" id="password2" placeholder="Confirm Your Password"
-                                        class="form-input">
+                                    <textarea placeholder="Your text" maxlength="10000" id="field" name="field"
+                                        data-name="field" required="" class="contacts-textarea w-input"></textarea>
                                 </div>
                                 <input id="sub" type="submit" value="Submit" class="submit-btn">
                             </form>
