--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
             <main>
                 <section class="firstSection">
                     <div class="leftSection">
-                        <p>
+                        <p class="left-para">
                             Hello! My name is <span class="name">Aryan</span> and I am a <span
-                                class="dev typed-text"></span> <span class="cursor">&nbsp;</span>
+                                class="dev typed-text"></span>
+                        <div class="buttons">
+                            <a href=""><button class="top-btn1">bio-data</button></a>
+                            <a href="https://github.com/AryanAD" target="_blank"><button
+                                    class="top-btn2">GITHUB</button></a>
+                        </div>
                         </p>
                     </div>
                     <div class="rightSection">
@@ -62,7 +67,8 @@
 
                 <section id="services" class="thirdSection">
                     <div class="services-container">
-                        <div class="service-box">
+                        <button class="about-btn btn1">
+                            <!-- <div class="service-box"> -->
                             <div class="service-icon">
                                 <img src="./assets/web_designer.png" class="icon">
                             </div>
@@ -70,25 +76,33 @@
                             <div class="service-description">
                                 &emsp;&emsp;&emsp;&emsp;I can provide you with an attractive and beautiful website
                                 design. I am an experienced
-                                web designer and you can rest assure that you will get the perfect value of your money
+                                web designer and you can rest assure that you will get the perfect value of your
+                                money
                                 spent on my project.
                             </div>
-                        </div>
+                            <!-- </div> -->
+                        </button>
 
-                        <div class="service-box">
+
+                        <button class="about-btn btn2">
+                            <!-- <div class="service-box"> -->
                             <div class="service-icon">
                                 <img src="./assets/web_dev.png" class="icon">
                             </div>
                             <div class="service-title">Web Development</div>
                             <div class="service-description">
-                                &emsp;&emsp;&emsp;&emsp;I can build you a responsive website based on a design of your
+                                &emsp;&emsp;&emsp;&emsp;I can build you a responsive website based on a design of
+                                your
                                 own choice. I am web
-                                developer, highly experienced in vanilla HTML, CSS and JS. I can also help you rebuild
+                                developer, highly experienced in vanilla HTML, CSS and JS. I can also help you
+                                rebuild
                                 your old website and make it modern and responsive.
                             </div>
-                        </div>
+                            <!-- </div> -->
+                        </button>
 
-                        <div class="service-box">
+                        <button class="about-btn btn3">
+                            <!-- <div class="service-box"> -->
                             <div class="service-icon">
                                 <img src="./assets/graphics_designer.png" class="icon">
                             </div>
@@ -97,10 +111,12 @@
                                 &emsp;&emsp;&emsp;&emsp;I am highly experienced in graphics designing, I have been
                                 working in this field
                                 for
-                                over three years and I have gained a lot of experience and expertise in this sector. I
+                                over three years and I have gained a lot of experience and expertise in this sector.
+                                I
                                 can provide you with the best designs you can get at this price.
                             </div>
-                        </div>
+                            <!-- </div> -->
+                        </button>
                     </div>
                 </section>
 
@@ -125,8 +141,9 @@
                                     <input type="text" id="email" placeholder="Enter Your Email" class="form-input">
                                 </div>
                                 <div>
-                                    <textarea placeholder="Your text" maxlength="10000" id="field" name="field"
-                                        data-name="field" required="" class="contacts-textarea w-input"></textarea>
+                                    <label for="textarea">Your Message</label>
+                                    <textarea placeholder="Your Message" maxlength="5000" id="field" name="field"
+                                        required class="form-your-msg"></textarea>
                                 </div>
                                 <input id="sub" type="submit" value="Submit" class="submit-btn">
                             </form>
