--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                             Hello! My name is <span class="name">Aryan</span> and I am a <span
                                 class="dev typed-text"></span>
                         <div class="buttons">
-                            <a href=""><button class="top-btn1">bio-data</button></a>
+                            <a href="./assets/bio-data.pdf" target="_blank" download=""><button
+                                    class="top-btn1">bio-data</button></a>
                             <a href="https://github.com/AryanAD" target="_blank"><button
                                     class="top-btn2">GITHUB</button></a>
                         </div>
