--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </p>
                     </div>
                     <div class="rightSection">
-                        <img src="./assets/web_dev_bg.png" alt="">
+                        <img src="./assets/pfp_circle.png">
                     </div>
                 </section>
 
