--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="about-html">
 
     <head>
         <meta charset="UTF-8">
@@ -11,12 +11,25 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class="details">
-        <div class="container">
+    <body class="about-details">
+
+        <div class="btn-container">
             <div class="btnBG">
                 <a href="index.html"><i class="fa-solid fa-house"></i></a>
             </div>
         </div>
+
+        <div class="container">
+            <h1>Aryan Adhikari</h1>
+            <h2>Web Developer & Graphics Designer</h2>
+            <div class="img">
+                <img src="pfp_circle.png">
+            </div>
+            <p>Hello There! I am a passionate web developer and a student, currently enrolled in Bachelor's in Computer
+                Application (BCA) - TU. I am a tech enthusiast and a quick learner.
+            </p>
+        </div>
+        <a href="contact.html"><button class="contactBTN">Contact Me</button></a>
 
     </body>
 
