--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="contact">
 
     <head>
         <meta charset="UTF-8">
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="contact-body">
 
         <div class="hero">
             <div class="navBG">
@@ -24,6 +24,20 @@
                 </nav>
             </div>
 
+            <div class="container">
+                <form onsubmit="sendEmail(); reset(); return false;">
+                    <h3>CONTACT ME</h3>
+                    <input type="text" id="name" placeholder="Your Name" required>
+                    <input type="email" id="email" placeholder="Email ID" required>
+                    <input type="text" id="phone" placeholder="Phone no." required>
+                    <textarea id="message" cols="20" rows="5">Your Message</textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+
+
+            <script src="https://smtpjs.com/v3/smtp.js"></script>
+            <script src="script.js"></script>
     </body>
 
 </html>
