--- a/services.html
+++ b/services.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="service-html">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="service-body">
 
         <div class="hero">
             <div class="navBG">
@@ -24,6 +27,40 @@
                 </nav>
             </div>
 
+            <div class="service">
+                <div class="max-width">
+                    <h1>Services</h1>
+                    <div class="content">
+                        <div class="card">
+                            <div class="box">
+                                <i class="fa-solid fa-code"></i>
+                                <h3>Web Development</h3>
+                                <p>I have gained a ton of experience when it comes to Web Development. I am capable of
+                                    building attractive and effective websites with the help of HTML, CSS and JS. Thanks
+                                    to my experience in this field.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="box">
+                                <i class="fa-solid fa-paint-roller"></i>
+                                <h3>Web Designing</h3>
+                                <p>I am highly experienced in Web Designing. Hence, I can guarentee to provide you with
+                                    the best value for your money. There will be no compromising in the designing and
+                                    the clients will be free to add or suggest any changes as they wish.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="box">
+                                <i class="fa-solid fa-pen-to-square"></i>
+                                <h3>Graphics Designing</h3>
+                                <p>I can turn your stupid to brilliant ideas into a work of art through my graphics
+                                    designing skills. I promise to provide the perfect value for the money you pay me.
+                                    The time for delivery depends on the pay and also depends on the work.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </body>
 
 </html>
