--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 
             <script src="https://smtpjs.com/v3/smtp.js"></script>
-            <script src="script.js"></script>
+            <script src="js/script.js"></script>
     </body>
 
 </html>
