--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="https://www.github.com/AryanAD" target="_blank">visit github</a>
             </div>
             <div class="img">
-                <img src="pfp_circle.png" class="pic">
+                <img src="assets/pfp_circle.png" class="pic">
             </div>
         </div>
 
