--- a/details.html
+++ b/details.html
@@ -23,7 +23,7 @@
             <h1>Aryan Adhikari</h1>
             <h2>Web Developer & Graphics Designer</h2>
             <div class="img">
-                <img src="pfp_circle.png">
+                <img src="assets/pfp_circle.png">
             </div>
             <p>Hello There! I am a passionate web developer and a student, currently enrolled in Bachelor's in Computer
                 Application (BCA) - TU. I am a tech enthusiast and a quick learner.
