--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 
     <body class="service-body">
 
-        <div class="hero">
+        <div class="service-hero">
             <div class="navBG">
                 <nav>
                     <h2>Aryan's Portfolio</h2>
