--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <input type="text" id="name" placeholder="Your Name" required>
                     <input type="email" id="email" placeholder="Email ID" required>
                     <input type="text" id="phone" placeholder="Phone no." required>
-                    <textarea id="message" cols="20" rows="5">Your Message</textarea>
+                    <textarea id="message" cols="20" rows="5" placeholder="Your Message"></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
