--- a/index.html
+++ b/index.html
@@ -38,6 +38,56 @@
             </div>
         </div>
 
+        <div class="secondSection ">
+            <div class="about">
+                <div class="about-img">
+                    <img src="assets/web-dev.png">
+                </div>
+
+                <div class="about-text">
+                    <div class="text">
+                        <h2>About Me</h2>
+                        <h5>I am a Web Developer, a Graphics Designer and a Web Designer!
+                        </h5>
+                        <p>
+                            Hello There! I am a passionate web developer and a student, currently enrolled in Bachelor's
+                            in Computer Application
+                            (BCA) - TU. I am a tech enthusiast and a quick learner. I am experienced in the field of Web
+                            Developent and Graphics Designing. I am an abled individual who can convert your silly to
+                            brilliant ideas into beautiful websites within 24 hours.
+                        </p>
+                        <a href="about.html" class="btn"><button>MORE INFO</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="thirdSection">
+            <div class="services">
+                <div class="row">
+                    <div class="box">
+                        <img src="assets/web_designing.jpg">
+                        <h3>Web Designing</h3>
+                        <p>There will be no compromises in <br>designing
+                            and
+                            the clients will be free to add or suggest <br>any changes as they wish.</p>
+                    </div>
+                    <div class="box">
+                        <img src="assets/web_development.jpg">
+                        <h3>Web Development</h3>
+                        <p>I am capable
+                            of
+                            building <br>attractive and effective websites with the help of <br> HTML, CSS and JS.</p>
+                    </div>
+                    <div class="box">
+                        <img src="assets/graphics_designing.jpg">
+                        <h3>Graphics Designing</h3>
+                        <p>I can turn your stupid to brilliant ideas <br> into a work of art through my <br> graphics
+                            designing skills.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
