--- a/index.html
+++ b/index.html
@@ -64,27 +64,46 @@
 
         <div class="thirdSection">
             <div class="services">
+                <h2>Services</h2>
                 <div class="row">
-                    <div class="box">
-                        <img src="assets/web_designing.jpg">
-                        <h3>Web Designing</h3>
-                        <p>There will be no compromises in <br>designing
-                            and
-                            the clients will be free to add or suggest <br>any changes as they wish.</p>
-                    </div>
-                    <div class="box">
-                        <img src="assets/web_development.jpg">
-                        <h3>Web Development</h3>
-                        <p>I am capable
-                            of
-                            building <br>attractive and effective websites with the help of <br> HTML, CSS and JS.</p>
-                    </div>
-                    <div class="box">
-                        <img src="assets/graphics_designing.jpg">
-                        <h3>Graphics Designing</h3>
-                        <p>I can turn your stupid to brilliant ideas <br> into a work of art through my <br> graphics
-                            designing skills.</p>
-                    </div>
+                    <button>
+                        <div class="box">
+                            <a href="services.html">
+                                <img src="assets/web_designing.jpg">
+                                <h3>Web Designing</h3>
+                                <p>There will be no compromises in designing
+                                    and
+                                    the clients will be free to add or suggest any changes as they wish.
+                                </p>
+                            </a>
+                        </div>
+                    </button>
+                    <button>
+                        <div class="box">
+                            <a href="services.html">
+                                <img src="assets/web_development.jpg">
+                                <h3>Web Development</h3>
+                                <p>I am capable
+                                    of
+                                    building attractive and effective websites with the help of HTML, CSS and JS. I
+                                    provide
+                                    the
+                                    best valur for your money.
+                                </p>
+                            </a>
+                        </div>
+                    </button>
+                    <button>
+                        <div class="box">
+                            <a href="services.html">
+                                <img src="assets/graphics_designing.jpg">
+                                <h3>Graphics Designing</h3>
+                                <p>I can turn your stupid to brilliant ideas into a work of art through my graphics
+                                    designing skills. I am highly skilled and creative which makes my work stand out.
+                                </p>
+                            </a>
+                        </div>
+                    </button>
                 </div>
             </div>
         </div>
