--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -69,7 +72,7 @@
                     <button>
                         <div class="box">
                             <a href="services.html">
-                                <img src="assets/web_designing.jpg">
+                                <img src="assets/web_designing.png">
                                 <h3>Web Designing</h3>
                                 <p>There will be no compromises in designing
                                     and
@@ -81,7 +84,7 @@
                     <button>
                         <div class="box">
                             <a href="services.html">
-                                <img src="assets/web_development.jpg">
+                                <img src="assets/web_development.png">
                                 <h3>Web Development</h3>
                                 <p>I am capable
                                     of
@@ -96,7 +99,7 @@
                     <button>
                         <div class="box">
                             <a href="services.html">
-                                <img src="assets/graphics_designing.jpg">
+                                <img src="assets/graphics_designing.png">
                                 <h3>Graphics Designing</h3>
                                 <p>I can turn your stupid to brilliant ideas into a work of art through my graphics
                                     designing skills. I am highly skilled and creative which makes my work stand out.
@@ -107,6 +110,64 @@
                 </div>
             </div>
         </div>
+
+        <div class="fourthSection">
+            <div class="project">
+                <h2>Projects</h2>
+                <p>Press the button below to proceed towards the project section of the website.
+                    The Project section contains all the projects i have completed so far with a button to preview those
+                    projects right under the description of the project.
+                </p>
+                <button class="proBTN">
+                    <a href="projects.html">PROJECTS</a>
+                </button>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="left">
+                    <h1>Aryan's Portfolio</h1>
+                    <p>
+                        A portfolio website of Aryan Adhikari that contains all the information one requires about Aryan
+                        to hire him.
+                    </p>
+                </div>
+                <div class="right">
+                    <div class="contactInfo">
+                        <p>
+                            <i class="fa-solid fa-globe"></i>
+                        <div class="align">&nbsp;Website:&nbsp;</div><a href="https://aryanad.github.io/portfolio"
+                            target="_blank">aryanad.github.io/portfolio</a>
+                        </p>
+                    </div>
+                    <div class="contactInfo">
+                        <p>
+                            <i class="fa-solid fa-envelope"></i>
+                        <div class="align">&nbsp;Email:&nbsp;</div><a
+                            href="mailto:aryanhohai@gmail.com?subject=Portfolio Website"
+                            target="_blank">aryanhohai@gmail.com</a>
+                        </p>
+                    </div>
+                    <div class="contactInfo">
+                        <p>
+                            <i class="fa-solid fa-phone"></i>
+                        <div class="align">&nbsp;Phone no:&nbsp;</div><a href="tel:9814273753">+977 9814273753</a>
+                        </p>
+                    </div>
+                    <div class="contactInfo">
+                        <p>
+                            <i class="fa-brands fa-github"></i>
+                        <div class="align">&nbsp;Github:&nbsp;</div><a href="https://www.github.com/AryanAD"
+                            target="_blank">github.com/AryanAD</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <p>Copyright &copy; 2023 | Aryan Adhikari</p>
+            </div>
+        </footer>
     </body>
 
 </html>
