--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
         <footer class="footer">
             <div class="footer-container">
+                <div class="divider"></div>
                 <div class="left">
                     <h1>Aryan's Portfolio</h1>
                     <p>
