--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
                 <nav>
                     <h2>Aryan's Portfolio</h2>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a class="link" href="index.html">Home</a></li>
+                        <li><a class="link" href="about.html">About</a></li>
+                        <li><a class="link" href="service.html">Services</a></li>
+                        <li><a class="link" href="project.html">Projects</a></li>
+                        <li><a class="link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
