--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="about-html">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8">
@@ -29,7 +29,9 @@
                 Application (BCA) - TU. I am a tech enthusiast and a quick learner.
             </p>
         </div>
-        <a href="contact.html"><button class="contactBTN">Contact Me</button></a>
+        <div class="contact-BTN">
+            <a href="contact.html"><button class="contactBTN">Contact Me</button></a>
+        </div>
 
     </body>
 
