--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 
     <body>
 
+        <div class="scroll-indicator">
+            <div class="progress"></div>
+        </div>
+
         <div class="hero">
             <div class="navBG">
                 <nav>
                     <h2>Aryan's Portfolio</h2>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a class="link" href="index.html">Home</a></li>
+                        <li><a class="link" href="about.html">About</a></li>
+                        <li><a class="link" href="/service.html">Services</a></li>
+                        <li><a class="link" href="project.html">Projects</a></li>
+                        <li><a class="link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -71,7 +75,7 @@
                 <div class="row">
                     <button>
                         <div class="box">
-                            <a href="services.html">
+                            <a href="service.html">
                                 <img src="assets/web_designing.png">
                                 <h3>Web Designing</h3>
                                 <p>There will be no compromises in designing
@@ -83,7 +87,7 @@
                     </button>
                     <button>
                         <div class="box">
-                            <a href="services.html">
+                            <a href="service.html">
                                 <img src="assets/web_development.png">
                                 <h3>Web Development</h3>
                                 <p>I am capable
@@ -98,7 +102,7 @@
                     </button>
                     <button>
                         <div class="box">
-                            <a href="services.html">
+                            <a href="service.html">
                                 <img src="assets/graphics_designing.png">
                                 <h3>Graphics Designing</h3>
                                 <p>I can turn your stupid to brilliant ideas into a work of art through my graphics
@@ -119,7 +123,7 @@
                     projects right under the description of the project.
                 </p>
                 <button class="proBTN">
-                    <a href="projects.html">PROJECTS</a>
+                    <a href="project.html">PROJECTS</a>
                 </button>
             </div>
         </div>
@@ -169,6 +173,11 @@
                 <p>Copyright &copy; 2023 | Aryan Adhikari</p>
             </div>
         </footer>
+        <div class="scroll-to-top">
+            <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+        </div>
+        <script src="js/script.js"></script>
+
     </body>
 
 </html>
